--- a/Source/game2.vcxproj
+++ b/Source/game2.vcxproj
@@ -177,10 +177,6 @@ move /Y "$(ProjectDir)..\$(Configuration)\*.pdb" "$(ProjectDir)$(Configuration)"
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="BmpLoader.h" />
     <ClInclude Include="help me.h" />
     <ClInclude Include="JGN_bmpLoader.h" />
     <ClInclude Include="JGN_Build.h" />
@@ -188,12 +184,21 @@ move /Y "$(ProjectDir)..\$(Configuration)\*.pdb" "$(ProjectDir)$(Configuration)"
     <ClInclude Include="JGN_SolidSphere.h" />
     <ClInclude Include="JGN_StrokeCharacter.h" />
     <ClInclude Include="JGN_Windows.h" />
-    <ClInclude Include="JNG_DropFile.h" />
+    <ClInclude Include="JGN_DropFile.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="JGN_Resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="JGN_bmpLoader.cpp" />
+    <ClCompile Include="JGN_Build.cpp" />
+    <ClCompile Include="JGN_DropFile.cpp" />
+    <ClCompile Include="JGN_SolidSphere.cpp" />
+    <ClCompile Include="JGN_StrokeCharacter.cpp" />
+    <ClCompile Include="JGN_Windows.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
