--- a/Source/game2.vcxproj
+++ b/Source/game2.vcxproj
@@ -187,6 +187,7 @@ move /Y "$(ProjectDir)..\$(Configuration)\*.pdb" "$(ProjectDir)$(Configuration)"
     <ClInclude Include="JGN_DropFile.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="VSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="JGN_Resource.rc" />
@@ -199,6 +200,7 @@ move /Y "$(ProjectDir)..\$(Configuration)\*.pdb" "$(ProjectDir)$(Configuration)"
     <ClCompile Include="JGN_StrokeCharacter.cpp" />
     <ClCompile Include="JGN_Windows.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="VSystem.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
