--- a/Source/game2.vcxproj.filters
+++ b/Source/game2.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="VSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Bonds.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="JGN_Resource.rc">
@@ -77,6 +80,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="VSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Bonds.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
