--- a/Source/game2.vcxproj
+++ b/Source/game2.vcxproj
@@ -181,13 +181,17 @@ move /Y "$(ProjectDir)..\$(Configuration)\*.pdb" "$(ProjectDir)$(Configuration)"
     <ClInclude Include="help me.h" />
     <ClInclude Include="JGN_bmpLoader.h" />
     <ClInclude Include="JGN_Build.h" />
+    <ClInclude Include="jgn_namespace.h" />
     <ClInclude Include="JGN_Resource.h" />
     <ClInclude Include="JGN_SolidSphere.h" />
     <ClInclude Include="JGN_StrokeCharacter.h" />
     <ClInclude Include="JGN_Windows.h" />
     <ClInclude Include="JGN_DropFile.h" />
+    <ClInclude Include="libs.h" />
+    <ClInclude Include="predefines.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="variables.h" />
     <ClInclude Include="VSystem.h" />
   </ItemGroup>
   <ItemGroup>
