vs(draw ok, tools rotateOK translateOK sellectOK)

--- a/Source/game2.vcxproj
+++ b/Source/game2.vcxproj
@@ -191,6 +191,7 @@ move /Y "$(ProjectDir)..\$(Configuration)\*.pdb" "$(ProjectDir)$(Configuration)"
     <ClInclude Include="predefines.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="ToolBar.h" />
     <ClInclude Include="variables.h" />
     <ClInclude Include="VSystem.h" />
   </ItemGroup>
@@ -206,6 +207,7 @@ move /Y "$(ProjectDir)..\$(Configuration)\*.pdb" "$(ProjectDir)$(Configuration)"
     <ClCompile Include="JGN_StrokeCharacter.cpp" />
     <ClCompile Include="JGN_Windows.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="ToolBar.cpp" />
     <ClCompile Include="VSystem.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
