--- a/Source/game2.vcxproj.filters
+++ b/Source/game2.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="virtualwindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cammera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="JGN_Resource.rc">
@@ -122,6 +125,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="virtualwindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Cammera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
